# fgcom-mumble

./: .clang-tidy  .gitignore  .gitmodules  API_DOCUMENTATION.md  ARCHITECTURAL_FIXES_IMPLEMENTED.md  BUILD_CONFIGURATION.md  CODE_QUALITY_ANALYSIS.md  COMMIT_MSG.txt  CRITICAL_CODE_INSPECTION_REPORT.md  DOCUMENTATION_STATUS.md  EZNEC_FIX_SUMMARY.md  EZNEC_VALIDATION_REPORT.md  FINAL_STATUS_REPORT.md  FIXES-COMPLETED.md  INSTALL.md  INSTALLATION.md  Makefile  PATTERN_FIXES_SUMMARY.md  RACE_CONDITION_FIXES_SUMMARY.md  README-de_DE.md  README.md  Readme.architecture.md  SECURITY.md  TEST_REPORT_COMPREHENSIVE.md  VEHICLE_DYNAMICS_API.md  bug-fixes-summary.md  build-for-codeql.sh  codeql-results.sarif  fgcom-mumble.conf.example  fix_all_build_failures.sh  fix_braces.sh  fix_clang_tidy.sh  fix_wire_formatting.sh  flawfinder_results.txt  improvements.md  makefile  pattern_analysis.md  plugin.spec.md  referenced_docs.txt  rename_eznec_files.sh  (+10 more)
client/mumble-plugin/: .clang-tidy  BUILD.md  CMakeLists.txt  Doxyfile  MODULE_DEVELOPMENT.md  Makefile  TestFramework.h  compile_commands.json  critical-issues.txt  debug.cpp  fgcom-mumble-refactored.cpp  fgcom-mumble-refactored.h  fgcom-mumble-tools-stub.cpp  fgcom-mumble.cpp  fgcom-mumble.h  fgcom-mumble.ini  makefile  plugin.spec.md  style-warnings.txt  test_4m_yagi_patterns  test_4m_yagi_patterns.cpp  test_api_and_patterns  test_core_functions  test_critical_functions  test_gpu_acceleration  test_pattern_mapping  test_security_system  test_terrain_elevation  test_work_unit_distribution
client/mumble-plugin/lib/: API_DOCUMENTATION.md  ARCHITECTURAL_FIXES_SUMMARY.md  FREQUENCY_OFFSET_DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  MILITARY_HF_FREQUENCIES.md  MumbleAPI.h  audio.h  (+211 more)
test-modules/atis_module_tests/: CMakeLists.txt  README.md  run_atis_module_tests.sh  test_atis_debug.cpp  test_atis_module_tests_properties.cpp
test-modules/audio_processing_tests/: CMakeLists.txt  test_audio_processing_main.cpp
test-modules/error_handling_tests/: CMakeLists.txt
test-modules/rapidcheck_tests/: CMakeLists.txt
test-modules/security_module_tests/: CMakeLists.txt  test_input_validation.cpp
test/agc_squelch_tests/: CMakeLists.txt  CMakeLists.txt.backup  run_comprehensive_tests.sh  test_agc_config.cpp  test_agc_edge_cases.cpp  test_agc_squelch_main.cpp  test_audio_processing.cpp  test_math_functions.cpp  test_singleton.cpp
test/antenna_pattern_module_tests/: CMakeLists.txt  CMakeLists.txt.backup  run_antenna_pattern_module_tests.sh  test_antenna_pattern_main.cpp  test_antenna_pattern_module_tests_properties.cpp  test_vehicle_antenna.cpp
test/audio_processing_tests/: CMakeLists.txt  run_audio_processing_tests.sh  test_audio_edge_cases.cpp  test_audio_effects.cpp  test_audio_processing_main.cpp  test_fixtures.h  test_sample_rate_conversion.cpp
test/database_configuration_module_tests/: CMakeLists.txt  run_database_configuration_module_tests.sh  test_configuration_file.cpp  test_csv_parsing.cpp  test_database_configuration_main.cpp  test_database_configuration_module_tests_properties.cpp
test/frequency_interference_tests/: CMakeLists.txt  Makefile  main.cpp  test_frequency_interference.cpp  test_frequency_interference_properties.cpp
test/frequency_management_tests/: CMakeLists.txt  CMakeLists.txt.backup  run_frequency_management_tests.sh  test_band_segment_validation.cpp  test_frequency_management_tests_properties.cpp  test_frequency_offsets.cpp
test/fuzzing_tests/: CMakeLists.txt  Makefile
test/geographic_module_tests/: CMakeLists.txt  run_geographic_module_tests.sh  test_geographic_module_tests_properties.cpp  test_vehicle_dynamics.cpp
test/integration_tests/: CMakeLists.txt  CMakeLists.txt.backup  test_end_to_end.cpp  test_integration_main.cpp
test/network_module_tests/: CMakeLists.txt  CMakeLists.txt.backup  run_network_module_tests.sh  test_network_edge_cases.cpp  test_network_module_main.cpp  test_rest_api.cpp  test_udp_protocol.cpp  test_websocket.cpp
test/openstreetmap_infrastructure_tests/: CMakeLists.txt  CMakeLists.txt.backup  run_openstreetmap_infrastructure_tests.sh
test/professional_audio_tests/: CMakeLists.txt  test_professional_audio_engine.cpp  test_simple_iir1.cpp
test/radio_propagation_tests/: CMakeLists.txt  run_radio_propagation_tests.sh  test_antenna_patterns.cpp  test_environmental_effects.cpp  test_frequency_propagation.cpp  test_line_of_sight.cpp  test_noise_floor.cpp  test_radio_propagation_tests_properties.cpp  test_solar_data_impact.cpp
test/satellite_communication_tests/: CMakeLists.txt  Makefile  run_satellite_communication_tests.sh  satellite_communication_tests  test_amateur_satellites.cpp  test_include.cpp  test_military_satellites.cpp  test_satellite_communication.cpp  test_satellite_communication_simple.cpp
test/voice_encryption_tests/: CMakeLists.txt  Makefile  test_freedv.cpp  test_granit.cpp  test_melpe.cpp  test_stanag_4197.cpp  test_vinson_ky57.cpp  test_yachta_t219.cpp
test/webrtc_api_tests/: CMakeLists.txt  README.md  main.cpp  run_webrtc_api_tests.sh  test_audio_processing.h  test_audio_quality.cpp  test_audio_quality.h  test_authentication.h  test_cross_platform.h  test_error_recovery.h  test_full_workflow.h  test_mobile_compatibility.h  test_multi_client.h  test_performance.h  test_protocol_translation.h  test_web_interface.h  test_webrtc_connection.cpp  test_webrtc_connection.h  test_webrtc_mumble_integration.h  webrtc_test_framework.cpp  webrtc_test_framework.h
voice-encryption/: CMakeLists.txt  Makefile  README.md  test_all_systems.cpp  test_freedv_melpe.cpp  test_functionality.cpp
voice-encryption/docs/: DEGRADATION_AND_INTERCEPTION_ANALYSIS.md  VOICE_ENCRYPTION_MODULE.md
voice-encryption/include/: encryption_system_interface.h  encryption_system_registry.h  voice_encryption.h
voice-encryption/src/: encryption_system_interface.cpp  encryption_system_registry.cpp  voice_encryption.cpp
voice-encryption/systems/: README.md
voice-encryption/tests/: CMakeLists.txt  test_granit.cpp  test_stanag_4197.cpp  test_vinson_ky57.cpp  test_voice_encryption.cpp  test_yachta_t219.cpp
(+7896 files in other folders)
